--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque nam officia ut qui praesentium magni adipisci veritatis, dolores necessitatibus sint quae, vitae nesciunt repudiandae quisquam! Vitae voluptatem odit earum?</p>
 </body>
 </html>
